--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "david-r-edgar/rdp",
     "type": "library",
     "description": "Ramer–Douglas–Peucker algorithm for polyline simplification",
-    "keywords": ["Ramer–Douglas–Peucker","polyline","geo","Ramer","Douglas","Peucker"],
+    "keywords": ["Ramer-Douglas-Peucker","polyline","geo","Ramer","Douglas","Peucker"],
     "homepage": "https://github.com/david-r-edgar/RDP-PHP",
     "license": "Public Domain",
     "authors":
