--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require":
     {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "phpunit/phpunit": "^5.3"
     },
     "autoload":
     {
